# weathertype

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  requirements.txt
plans/: weather_visualization_plan.md
weathertype/: __init__.py  main.py  requirements.txt
weathertype/api/: __init__.py  models.py  open_meteo.py  png_decoder.py  rainviewer.py  regional.py
weathertype/calculations/: __init__.py  hodogram.py  meteograph.py  regional.py  thermodynamics.py
weathertype/tui/: __init__.py  ansi_parser.py  app.py  views.py
weathertype/utils/: __init__.py  colors.py  coordinates.py  units.py
weathertype/visualizations/: __init__.py  forecast.py  hodogram.py  meteograph.py  radar.py  regional_pressure.py  regional_temp.py  skewt.py
